<?xml version="1.0"?>
<package>
  <name>realm_vslam_base</name>
  <version>1.0.0</version>
  <description>The realm_vslam package</description>

  <maintainer email="al.kern@tu-bs.de">laxnpander</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>realm_core</build_depend>
  <build_depend>realm_io</build_depend>
  <build_depend>orb_slam_2</build_depend>

  <run_depend>realm_core</run_depend>
  <run_depend>realm_io</run_depend>
  <run_depend>orb_slam_2</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lrealm_vslam_base"/>
  </export>
</package>
