<package format="2">
  <name>realm_vslam_base</name>
  <version>1.0.0</version>
  <description>The realm_vslam_base package</description>

  <author>Alexander Kern</author>
  <maintainer email="al.kern@tu-bs.de">laxnpander</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>realm_core</build_depend>
  <build_depend>realm_io</build_depend>
  <build_depend>orb_slam_2</build_depend>
  <build_depend>cmake_modules</build_depend>

  <exec_depend>realm_core</exec_depend>
  <exec_depend>realm_io</exec_depend>
  <exec_depend>orb_slam_2</exec_depend>
  <exec_depend>cmake_modules</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lrealm_vslam_base"/>
  </export>
</package>
